whitespace fix

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
     gap: 0px 0px;
     position: relative;
     display: flex;
-    margin: 30px 0 0 70px;
+    margin: 0 0 0 70px;
 }
 
 .Profile>#Profile_Picture {
